<resources>
    <string name="app_name">Outdoor</string>
    <string name="sign_out">Wyloguj</string>

    <string name="title_activity_photo_video_fullscreen">PhotoVideoFullscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="report_lock_text">Meldowane Misji</string>
    <string name="display_name">display name</string>
    <string name="label">label</string>
    <string name="team">team</string>
    <string name="gender">gender</string>
    <string name="fb_url">Facebook URL</string>
    <string name="make_judge">Make Judge</string>
    <string name="update_wizard">Update Wizard</string>
    <string name="total_amount">wszystkie odznaki</string>
    <string name="colon">  :  </string>
    <string name="remaining_badges">pozostałe odznaki</string>
    <string name="required_executions">wymagane misje</string>
    <string name="awarded_users">Zdobywcy:</string>
</resources>
