<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/admin_edit_user_vertical_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>

            <TextView
                android:id="@+id/user_email_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/user_image_view"
                android:layout_toRightOf="@id/user_image_view"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:text="@string/display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:layout_marginBottom="@dimen/admin_edit_user_vertical_margin"
            android:inputType="textPersonName"
            android:id="@+id/display_name_edit_view"
            android:hint="@string/display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="8"/>

        <TextView
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:text="@string/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:layout_marginBottom="@dimen/admin_edit_user_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:text="@string/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/team_spinner"
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:layout_marginBottom="@dimen/admin_edit_user_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:text="@string/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:layout_marginBottom="@dimen/admin_edit_user_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:text="@string/fb_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginTop="@dimen/admin_edit_user_vertical_margin"
            android:layout_marginBottom="@dimen/admin_edit_user_vertical_margin"
            android:inputType="textUri"
            android:id="@+id/fb_url_edit_view"
            android:hint="@string/fb_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/make_judge_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/icon_small_judge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/make_judge"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/icon_small_wizards" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/update_wizard"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>